--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "homepage": "https://github.com/githubdlp/ppdpeepic1#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "chai": "^4.3.7",
+    "config": "^3.3.9",
     "express": "^4.18.2",
+    "mocha": "^10.2.0",
     "node-cache": "^5.1.2"
   }
 }
